--- a/formulario.html
+++ b/formulario.html
@@ -18,21 +18,21 @@
                 </tr>
 
                 <tr>
-                    <td><label>Correo electrónico:</label></td>
+                    <td><label>Correo:</label></td>
                     <td>
                         <input type="email" name="email" required>
                     </td>
                 </tr>
 
                 <tr>
-                    <td><label>Edad</label></td>
+                    <td><label>Edad:</label></td>
                     <td>
                         <input type = "number" id = "edad" name = "edad" min = "12" max = "40" required>
                     </td>
                 </tr>
 
                 <tr>
-                    <td><label>Nickname</label></td>
+                    <td><label>Nickname:</label></td>
                     <td>
                         <input type = "text" id = "nombre" name = "nombre" pattern="[A-Za-z0-9]+" required>
                     </td>
@@ -48,7 +48,7 @@
                 </tr>
 
                 <tr>
-                    <td><label>Juegos Favoritos</label></td>
+                    <td><label>Juegos Favoritos:</label></td>
                     <td>
                         <input type = "checkbox" name = "Juegos" value = "FIFA" > FIFA
 
@@ -60,7 +60,7 @@
                 </tr>
 
                 <tr>
-                    <td><label>Fecha de Inscripción</label></td>
+                    <td><label>Fecha de Inscripción:</label></td>
                     <td>
                         <input type = "date" name = "fecha" min ="2025-01-01" max = "2025-12-31" required>
                     </td>
@@ -82,3 +82,4 @@
     </body>
 
 </html>
+
